# flet-img_to_webp

./: .gitignore  README.md  main.py  pyproject.toml
libs/components/: buttons.py  image_item.py
views/: mainscreen.py
